# weathernest

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/docs/: _learning-journal.md  architecture.md  decisions.md  deployment.md  environment-variables.md  overview.md  repository-layout.md  tech-stack.md
.claude/rules/: api-conventions.md  avoid.md  git.md  workflow.md
.claude/skills/: commands.md  dev-setup.md  git-workflow.md  testing.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
backend/app/api/v1/: forecast.py  locations.py  router.py  sensors.py
backend/app/core/: config.py  database.py
backend/app/schemas/: forecast.py
backend/app/services/: forecast.py
backend/tests/: conftest.py  test_forecast.py  test_forecast_service.py  test_locations.py  test_sensors.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: main.tsx
